--- a/header.html
+++ b/header.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <nav>
     <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="clarinet.html">Clarinet</a></li>
-        <li><a href="bassClarinet.html">Bass Clarinet</a></li>
+        <li><a href="index.html" id="link1">Home</a></li>
+        <li><a href="clarinet.html" id="link2">Clarinet</a></li>
+        <li><a href="bassClarinet.html" id="link3">Bass Clarinet</a></li>
     </ul>
 </nav>
