--- a/header.html
+++ b/header.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <nav>
     <ul>
-        <li><a href="index.html" id="link1">Home</a></li>
-        <li><a href="clarinet.html" id="link2">Clarinet</a></li>
-        <li><a href="bassClarinet.html" id="link3">Bass Clarinet</a></li>
+        <li><a href="index.html"><span id="link1">Home</span></a></li>
+        <li><a href="clarinet.html"><span id="link2">Clarinet</span></a></li>
+        <li><a href="bassClarinet.html"><span id=link3">Bass Clarinet</span></a></li>
     </ul>
 </nav>
