--- a/header.html
+++ b/header.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <nav>
     <ul>
-        <li><a href="index.html"><span id="link1">Home</span></a></li>
-        <li><a href="clarinet.html"><span id="link2">Clarinet</span></a></li>
-        <li><a href="bassClarinet.html"><span id=link3">Bass Clarinet</span></a></li>
+        <a href="index.html"><li id="link1">Home</li></a>
+        <a href="clarinet.html"><li id="link2">Clarinet</li></a>
+        <a href="bassClarinet.html"><li id="link3">Bass Clarinet</li></a>
     </ul>
 </nav>
 <script>
