--- a/header.html
+++ b/header.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <nav>
     <ul>
-        <a href="index.html"id="link1"><li>Home</li></a>
-        <a href="clarinet.html" id="link2"><li>Clarinet</li></a>
-        <a href="bassClarinet.html" id="link3"><li>Bass Clarinet</li></a>
+        <li id="link1"><a href="index.html">Home</a></li>
+        <li id="link2"><a href="clarinet.html">Clarinet</a></li>
+        <li id="link3"><a href="bassClarinet.html">Bass Clarinet</a></li>
     </ul>
 </nav>
 <script>
@@ -12,8 +12,8 @@
     function selectActive() {
     for (i=1; i<=3; i++) {
         if (document.getElementById("page" + i) != null) {
-            var linkName = document.getElementById("link" + i).innerHTML;
-            document.getElementById("link" + i).innerHTML = "<li class=active>" + linkName + "</li>";   
+            var element = document.getElementById("link" + i);
+            element.classList.add("active");
         }
     }
 }
